[project]
name = "ben-usps-bot"
version = "0.1.0"
description = "USPS load board Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.4.1",
    "beautifulsoup4==4.14.3",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
